deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdkwork-webserver-website-__SDKWORK_WEBSITE_TENANT_FLEET_NAME__-headless
  labels:
    app.kubernetes.io/name: sdkwork-webserver
    app.kubernetes.io/component: website-data-plane
    sdkwork.com/tenant-fleet: __SDKWORK_WEBSITE_TENANT_FLEET_NAME__
spec:
  clusterIP: None
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/name: sdkwork-webserver
    app.kubernetes.io/component: website-data-plane
    sdkwork.com/tenant-fleet: __SDKWORK_WEBSITE_TENANT_FLEET_NAME__
  ports:
    - name: website-http
      port: 8080
      targetPort: website-http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sdkwork-webserver-website-__SDKWORK_WEBSITE_TENANT_FLEET_NAME__
  labels:
    app.kubernetes.io/name: sdkwork-webserver
    app.kubernetes.io/component: website-data-plane
    sdkwork.com/tenant-fleet: __SDKWORK_WEBSITE_TENANT_FLEET_NAME__
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sdkwork-webserver
    app.kubernetes.io/component: website-data-plane
    sdkwork.com/tenant-fleet: __SDKWORK_WEBSITE_TENANT_FLEET_NAME__
  ports:
    - name: website-http
      port: 80
      targetPort: website-http
      protocol: TCP
      appProtocol: http
---
apiVersion: v1
kind: Service
metadata:
  name: sdkwork-webserver-events-__SDKWORK_WEBSITE_TENANT_FLEET_NAME__-__SDKWORK_WEBSITE_NODE_NAME__
  labels:
    app.kubernetes.io/name: sdkwork-webserver
    app.kubernetes.io/component: website-data-plane
    sdkwork.com/tenant-fleet: __SDKWORK_WEBSITE_TENANT_FLEET_NAME__
    sdkwork.com/web-node: __SDKWORK_WEBSITE_NODE_NAME__
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sdkwork-webserver
    app.kubernetes.io/component: website-data-plane
    sdkwork.com/tenant-fleet: __SDKWORK_WEBSITE_TENANT_FLEET_NAME__
    sdkwork.com/web-node: __SDKWORK_WEBSITE_NODE_NAME__
  ports:
    - name: provider-events
      port: 3811
      targetPort: provider-events
      protocol: TCP
      appProtocol: http
